<resources>
    <string name="app_name">Trésor Mobile Money</string>

    <!-- Internet Error-->
    <string name="internet_connexion_error_title">Connexion internet</string>
    <string name="internet_connexion_error_message">Votre appareil ne semble pas être connecté à internet.</string>

    <!-- UserLogin -->
    <string name="activity_user_login_title_toolBar">Information Générale Utilisateur</string>
    <string name="activity_user_login_title_layout"><u>Authentification</u></string>
    <string name="activity_user_login_editText_hint_pseudo">LOGIN</string>
    <string name="activity_user_login_editText_hint_password">MOT DE PASSE</string>
    <string name="activity_user_login_button_text_validate">Valider</string>
    <string name="activity_user_login_button_text_register">Inscription</string>
    <string name="activity_user_login_error_message_pseudo">Veuillez insérer votre login.</string>
    <string name="activity_user_login_error_message_password">Veuillez entrer votre mot de passe.</string>
    <string name="activity_user_login_error_valid_pseudo_password">Login et/ou mot de passe incorrect(s).</string>
    <string name="activity_user_login_success_valid_pseudo_password">Votre authentification a été validée par le serveur.</string>

    <!-- UserRegister -->
    <string name="activity_user_register_title_toolBar">Inscription au Tresor Public Malagasy</string>
    <string name="activity_user_register_expandable_credential">Piece:  cin/passeport</string>
    <string name="activity_user_register_expandable_credential_text_nationality">Nationalité: </string>
    <string name="activity_user_register_expandable_credential_text_nationality_malagasy">Malagasy</string>
    <string name="activity_user_register_expandable_credential_text_nationality_other">Autres</string>
    <string name="activity_user_register_expandable_credential_text_cin_hint">cin/passeport</string>
    <string name="activity_user_register_expandable_credential_text_cin_date">dd/mm/yyyy</string>
    <string name="activity_user_register_expandable_credential_button_verify">Vérifier</string>
    <string name="activity_user_register_expandable_credential_button_from">Du : </string>
    <string name="activity_user_register_expandable_credential_button_done_at">Fait à :</string>
    <string name="activity_user_register_expandable_credential_checkBox">Duplicata</string>
    <string name="activity_user_register_expandable_credential_text_duplicata_hint">Duplicata du :</string>
    <string name="activity_user_register_expandable_credential_button_duplicata_done_at">Duplicata fait à :</string>
    <string name="activity_user_register_expandable_credential_button_piece_recto">Pièce en couleur recto :</string>
    <string name="activity_user_register_expandable_credential_button_piece_recto_hint">PIÈCE RECTO</string>
    <string name="activity_user_register_expandable_credential_button_piece_verso">Pièce en couleur verso :</string>
    <string name="activity_user_register_expandable_credential_button_piece_verso_hint">PIÈCE VERSO</string>
    <string name="activity_user_register_expandable_credential_button_load">Charger</string>

    <string name="activity_user_register_expandable_info">Information générale</string>
    <string name="activity_user_register_expandable_info_text_nationality_mr">Mr</string>
    <string name="activity_user_register_expandable_info_text_nationality_mlle">Mlle</string>
    <string name="activity_user_register_expandable_info_text_nationality_mme">Mme</string>
    <string name="activity_user_register_expandable_info_text_name">Nom(s) :</string>
    <string name="activity_user_register_expandable_info_text_firstName">Prénom(s) :</string>
    <string name="activity_user_register_expandable_info_text_birthday">Date de naissance :</string>
    <string name="activity_user_register_expandable_info_text_hint_name">Nom(s)</string>
    <string name="activity_user_register_expandable_info_text_hint_firstName">Prénom(s)</string>
    <string name="activity_user_register_expandable_info_text_hint_birthday">Date de naissance</string>

    <string name="activity_user_register_expandable_contact">Contact &amp; Adresse personnelle</string>
    <string name="activity_user_register_expandable_contact_text_phone">Téléphone :</string>
    <string name="activity_user_register_expandable_contact_text_mail">E-mail :</string>
    <string name="activity_user_register_expandable_contact_text_hint_phone">Numéro de téléphone mobile</string>
    <string name="activity_user_register_expandable_contact_text_hint_mail">test@example.com</string>
    <string name="activity_user_register_expandable_contact_text_hint_address">Adresse personnelle</string>

    <!-- Avatar -->
    <string name="avatar_take_picture_title">Prendre une photo</string>
    <string name="avatar_take_picture_message">Veuillez choisir un mode de capture.</string>
    <string name="avatar_picture_type_file_button">Gallerie photo</string>
    <string name="avatar_picture_type_camera_button">Appareil photo</string>
    <string name="avatar_error_title">Erreur appareil photo</string>
    <string name="avatar_canceled_message">L\'utilisateur a annulé la capture d\'image.</string>
    <string name="avatar_device_unsupported_error_message">Désolé! Votre appareil ne supporte pas l\'appareil photo.</string>
    <string name="avatar_failed_error_message">Désolé, impossible de prendre une images.</string>

    <string name="text_select">Séléctionner ici</string>
    <string-array name="array_province">
        <item>ANTANANARIVO</item>
        <item>ANTSIRANANA</item>
        <item>FIANARANTSOA</item>
        <item>MAHAJANGA</item>
        <item>TOAMASINA</item>
        <item>TOLIARY</item>
    </string-array>
    <string-array name="array_region">
        <!-- -->
    </string-array>
    <string-array name="array_district">
        <!-- -->
    </string-array>
    <string-array name="array_commune">
        <!-- -->
    </string-array>
</resources>
