<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:orientation="vertical">

    <!-- radioGroup: sex -->
    <RadioGroup
        android:id="@+id/activityUserRegisterRadioGroupSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/activityUserRegisterRadioButtonSexMr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:buttonTint="@color/userLoginColorText"
            android:checked="false"
            android:text="@string/activity_user_register_expandable_info_text_nationality_mr"
            android:textColor="@color/color_black" />

        <RadioButton
            android:id="@+id/activityUserRegisterRadioButtonSexMlle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:buttonTint="@color/userLoginColorText"
            android:checked="false"
            android:text="@string/activity_user_register_expandable_info_text_nationality_mlle"
            android:textColor="@color/color_black" />

        <RadioButton
            android:id="@+id/activityUserRegisterRadioButtonSexMme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:buttonTint="@color/userLoginColorText"
            android:checked="false"
            android:text="@string/activity_user_register_expandable_info_text_nationality_mme"
            android:textColor="@color/color_black" />
    </RadioGroup>

    <!-- linearLayout: information -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/color_blue"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/color_white"
                android:gravity="left|center"
                android:text="@string/activity_user_register_expandable_info_text_name"
                android:textAllCaps="false"
                android:textColor="@color/color_black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/color_white"
                android:gravity="left|center"
                android:text="@string/activity_user_register_expandable_info_text_firstName"
                android:textAllCaps="false"
                android:textColor="@color/color_black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/color_white"
                android:gravity="left|center"
                android:text="@string/activity_user_register_expandable_info_text_birthday"
                android:textAllCaps="false"
                android:textColor="@color/color_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/color_green"
            android:orientation="vertical">

            <EditText
                android:id="@+id/activityUserRegisterEditTextName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/rounded_bgk_btn_white"
                android:gravity="center|left"
                android:hint="@string/activity_user_register_expandable_info_text_hint_name"
                android:inputType="text"
                android:maxLines="1"
                android:textAllCaps="true"
                android:textColor="@color/color_black" />

            <EditText
                android:id="@+id/activityUserRegisterEditTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/rounded_bgk_btn_white"
                android:gravity="center|left"
                android:hint="@string/activity_user_register_expandable_info_text_hint_firstName"
                android:inputType="text"
                android:maxLines="1"
                android:textAllCaps="true"
                android:textColor="@color/color_black" />

            <EditText
                android:id="@+id/activityUserRegisterEditTextBirthday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/rounded_bgk_btn_white"
                android:clickable="true"
                android:focusable="false"
                android:gravity="center|left"
                android:hint="@string/activity_user_register_expandable_info_text_hint_birthday"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:textAllCaps="true"
                android:textColor="@color/color_black" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1"></LinearLayout>

</LinearLayout>