<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/activity_user_register_expandable_credential_text_nationality"
        android:textColor="@color/color_black" />

    <!-- radioGroup: nationality -->
    <RadioGroup
        android:id="@+id/activityUserRegisterRadioGroupNationality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/activityUserRegisterRadioButtonNationalityMalagasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:buttonTint="@color/userLoginColorText"
            android:checked="true"
            android:text="@string/activity_user_register_expandable_credential_text_nationality_malagasy"
            android:textColor="@color/color_black" />

        <RadioButton
            android:id="@+id/activityUserRegisterRadioButtonNationalityOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:buttonTint="@color/userLoginColorText"
            android:text="@string/activity_user_register_expandable_credential_text_nationality_other"
            android:textColor="@color/color_black" />
    </RadioGroup>

    <!-- linearLayout: CIN number -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/activityUserRegisterEditTextCINNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_bgk_btn_white"
            android:gravity="center|left"
            android:hint="@string/activity_user_register_expandable_credential_text_cin_hint"
            android:inputType="number"
            android:maxLength="12"
            android:maxLines="1"
            android:textAllCaps="true"
            android:textColor="@color/color_black" />

        <Button
            android:id="@+id/activityUserRegisterButtonCINNumberVerify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0"
            android:background="@drawable/rounded_bgk_btn_white"
            android:gravity="center"
            android:text="@string/activity_user_register_expandable_credential_button_verify"
            android:textAllCaps="true"
            android:textColor="@color/color_black" />
    </LinearLayout>

    <!-- linearLayout: CIN date -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:background="@color/color_white"
            android:gravity="left|center"
            android:text="@string/activity_user_register_expandable_credential_button_from"
            android:textAllCaps="false"
            android:textColor="@color/color_black" />

        <EditText
            android:id="@+id/activityUserRegisterEditTextCINNumberDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_bgk_btn_white"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center|left"
            android:hint="@string/activity_user_register_expandable_credential_text_cin_date"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:textAllCaps="true"
            android:textColor="@color/color_black" />
    </LinearLayout>

    <!-- linearLayout: CIN done at -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="0"
            android:background="@color/color_white"
            android:gravity="left|center"
            android:text="@string/activity_user_register_expandable_credential_button_done_at"
            android:textAllCaps="false"
            android:textColor="@color/color_black" />

        <EditText
            android:id="@+id/activityUserRegisterEditTextCINNumberDoneAt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_bgk_btn_white"
            android:gravity="center|left"
            android:hint="@string/activity_user_register_expandable_credential_button_done_at"
            android:inputType="text"
            android:maxEms="50"
            android:maxLines="1"
            android:textAllCaps="false"
            android:textColor="@color/color_black" />
    </LinearLayout>

    <!-- checkBox: duplicata -->
    <CheckBox
        android:id="@+id/activityUserRegisterCheckBoxCINDuplicata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/activity_user_register_expandable_credential_checkBox"
        android:textAllCaps="true"
        android:textColor="@color/color_black" />

    <!-- linearLayout: duplicata -->
    <LinearLayout
        android:id="@+id/activityUserRegisterLinearLayoutCINDuplicata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/activityUserRegisterButtonCINNumberDuplicataFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="0"
                android:background="@color/color_white"
                android:gravity="left|center"
                android:text="@string/activity_user_register_expandable_credential_button_from"
                android:textAllCaps="false"
                android:textColor="@color/color_black" />

            <EditText
                android:id="@+id/activityUserRegisterEditTextCINNumberDuplicata"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_bgk_btn_white"
                android:enabled="false"
                android:focusable="false"
                android:gravity="center|left"
                android:hint="@string/activity_user_register_expandable_credential_text_cin_date"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:textAllCaps="false"
                android:textColor="@color/color_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/activityUserRegisterButtonCINNumberDuplicataDoneAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="0"
                android:background="@color/color_white"
                android:gravity="left|center"
                android:text="@string/activity_user_register_expandable_credential_button_done_at"
                android:textAllCaps="false"
                android:textColor="@color/color_black" />

            <EditText
                android:id="@+id/activityUserRegisterEditTextCINNumberDuplicataDoneAt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_bgk_btn_white"
                android:gravity="center|left"
                android:hint="@string/activity_user_register_expandable_credential_button_duplicata_done_at"
                android:inputType="text"
                android:maxEms="50"
                android:maxLines="1"
                android:textAllCaps="false"
                android:textColor="@color/color_black" />
        </LinearLayout>
    </LinearLayout>

    <!-- linearLayout: recto -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|center"
            android:layout_weight="1"
            android:background="@color/color_white"
            android:gravity="left|center"
            android:text="@string/activity_user_register_expandable_credential_button_piece_recto"
            android:textAllCaps="true"
            android:textColor="@color/color_black" />

        <EditText
            android:id="@+id/activityUserRegisterEditTextCINPhotoRecto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_bgk_btn_white"
            android:clickable="true"
            android:focusable="false"
            android:gravity="left|center"
            android:hint="@string/activity_user_register_expandable_credential_button_piece_recto_hint"
            android:inputType="text"
            android:maxEms="50"
            android:maxLines="1"
            android:textAllCaps="true"
            android:textColor="@color/color_black" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@drawable/rounded_bgk_btn_blue_small"
            android:gravity="center"
            android:text="@string/activity_user_register_expandable_credential_button_load"
            android:textAllCaps="true"
            android:textColor="@color/color_white" />
    </LinearLayout>

    <!-- linearLayout: verso -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|center"
            android:layout_weight="1"
            android:background="@color/color_white"
            android:gravity="left|center"
            android:text="@string/activity_user_register_expandable_credential_button_piece_verso"
            android:textAllCaps="true"
            android:textColor="@color/color_black" />

        <EditText
            android:id="@+id/activityUserRegisterEditTextCINPhotoVerso"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_bgk_btn_white"
            android:clickable="true"
            android:focusable="false"
            android:gravity="left|center"
            android:hint="@string/activity_user_register_expandable_credential_button_piece_verso_hint"
            android:inputType="text"
            android:maxEms="50"
            android:maxLines="1"
            android:textAllCaps="true"
            android:textColor="@color/color_black" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@drawable/rounded_bgk_btn_blue_small"
            android:gravity="center"
            android:text="@string/activity_user_register_expandable_credential_button_load"
            android:textAllCaps="true"
            android:textColor="@color/color_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1"></LinearLayout>

</LinearLayout>