<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userLoginActivityNestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.UserLoginActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/userLoginActivityFormScrollView"
        style="@style/scrollbarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:paddingBottom="20dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/tresor_bg_small" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center">

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/userLoginActivityLinearLayoutCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingBottom="25dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_account_circle_black" />

                        <TextView
                            android:id="@+id/textViewLayoutTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:gravity="center"
                            android:text="@string/activity_user_login_title_layout"
                            android:textAllCaps="true"
                            android:textColor="@color/userLoginColorText"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayoutEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/color_wetAsphalt"
                        android:theme="@style/TextLabel">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/textInputEditTextPseudo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/activity_user_login_editText_hint_pseudo"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/userLoginColorText"
                            android:textColorHighlight="@color/userLoginColorText"
                            android:textColorHint="@color/userLoginColorText"
                            android:textSize="18sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayoutPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textColorHint="@color/color_wetAsphalt"
                        android:theme="@style/TextLabel">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/textInputEditTextPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/activity_user_login_editText_hint_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@color/userLoginColorText"
                            android:textColorHighlight="@color/userLoginColorText"
                            android:textColorHint="@color/userLoginColorText"
                            android:textSize="18sp" />
                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="50dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/appCompatButtonLogin"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/rounded_bgk_btn_white"
                            android:text="@string/activity_user_login_button_text_validate"
                            android:textAllCaps="false"
                            android:textColor="@color/userLoginColorTextHint"
                            android:textSize="18sp" />

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/appCompatButtonLinkRegister"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/rounded_bgk_btn_white"
                            android:text="@string/activity_user_login_button_text_register"
                            android:textAllCaps="false"
                            android:textColor="@color/userLoginColorTextHint"
                            android:textSize="18sp" />

                    </LinearLayout>

                </android.support.v7.widget.LinearLayoutCompat>

            </RelativeLayout>

        </FrameLayout>

    </ScrollView>
</android.support.v4.widget.NestedScrollView>